--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -3,3 +3,10 @@
 = render 'form'
 
 = link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
