--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -10,3 +10,13 @@
 = link_to 'Back',
 = link_to 'Back',
 = link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
+= link_to 'Back',
